apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipiece-backend
spec:
  selector:
    app: ipiece-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
